--- a/cfrs/crop_fertilizer.ipynb
+++ b/cfrs/crop_fertilizer.ipynb
@@ -3875,7 +3875,7 @@
     "import pickle\n",
     "import numpy as np\n",
     "\n",
-    "#Load the saved models and scalers\n",
+    "//Load the saved models and scalers\n",
     "with open(\"crop.pkl\", \"rb\") as crop_model_file:\n",
     "    crop_model = pickle.load(crop_model_file)\n",
     "\n",
@@ -3888,7 +3888,7 @@
     "with open(\"fertilizer_scaler.pkl\", \"rb\") as fertilizer_scaler_file:\n",
     "    fertilizer_scaler = pickle.load(fertilizer_scaler_file)\n",
     "\n",
-    "#Crop Recommendation Function\n",
+    "//Crop Recommendation Function\n",
     "def crop_recommend(N, P, K, temperature, humidity, ph, rainfall):\n",
     "    features = np.array([[N, P, K, temperature, humidity, ph, rainfall]])\n",
     "    transformed_features = crop_scaler.transform(features)\n",
@@ -3902,7 +3902,7 @@
     "    }\n",
     "    return crop_dict.get(prediction[0], \"Unknown Crop\")\n",
     "\n",
-    "#Fertilizer Recommendation Function\n",
+    "//Fertilizer Recommendation Function\n",
     "def recommend_fertilizer(Temperature, Humidity, Moisture, Soil_Type, Crop_Type, Nitrogen, Potassium, Phosphorous):\n",
     "    features = np.array([[Temperature, Humidity, Moisture, Soil_Type, Crop_Type, Nitrogen, Potassium, Phosphorous]])\n",
     "    transformed_features = fertilizer_scaler.transform(features)\n",
@@ -3913,11 +3913,11 @@
     "    }\n",
     "    return fert_dict.get(prediction[0], \"Unknown Fertilizer\")\n",
     "\n",
-    "#Streamlit Interface\n",
+    "//Streamlit Interface\n",
     "def main():\n",
     "    st.title(\"🌱 Crop and Fertilizer Recommendation System\")\n",
     "    \n",
-    "    # Sidebar for navigation\n",
+    "    // Sidebar for navigation\n",
     "    menu = [\"🌾 Crop Recommendation\", \"🌿 Fertilizer Recommendation\"]\n",
     "    choice = st.sidebar.selectbox(\"🔍 Select Recommendation Type\", menu)\n",
     "    \n",
@@ -3944,7 +3944,7 @@
     "        st.subheader(\"🌿 Fertilizer Recommendation\")\n",
     "        col1, col2 = st.columns(2)  # Create two columns\n",
     "        \n",
-    "        # Soil and Crop Type Mappings\n",
+    "        // Soil and Crop Type Mappings\n",
     "        soil_type_dict = {\"Sandy\": 1, \"Loamy\": 2, \"Clayey\": 3}\n",
     "        crop_type_dict = {\"Rice\": 1, \"Maize\": 2, \"Wheat\": 3}\n",
     "\n",
@@ -3960,7 +3960,7 @@
     "            Nitrogen = st.number_input(\"💧 Nitrogen Level (N)\", min_value=0, max_value=200, value=10)\n",
     "            Potassium = st.number_input(\"🌿 Potassium Level (K)\", min_value=0, max_value=200, value=15)\n",
     "\n",
-    "        # Convert names to encoded values\n",
+    "        // Convert names to encoded values\n",
     "        Soil_Type_encoded = soil_type_dict[Soil_Type]\n",
     "        Crop_Type_encoded = crop_type_dict[Crop_Type]\n",
     "        \n",
